# RequestClassifier

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
completed/: analytics_20260617_123921.json  analytics_20260617_144619.json  output_20260617_132533.json  output_20260617_144619.json
settings/: prompt_template.txt  taxonomy.yaml
src/: classifier.py  config.py  csv_reader.py  main.py  progress.py  rate_limiter.py  report_generator.py  schemas.py  sheets_export.py  telegram_digest.py
tests/: test_classifier.py  test_config.py  test_csv_reader.py  test_integrations.py  test_main.py  test_progress.py  test_rate_limiter.py  test_report_generator.py  test_schemas.py
