[project]
name = "ai-request-classifier"
version = "0.1.0"
description = "AI-Powered Internal Request Classifier Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=0.1.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.0.0",
    "gspread>=5.10.0",
    "httpx>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
